# solver2d

./: .clang-format  CMakeLists.txt  LICENSE  README.md
extras/: soft_constraint.m
include/solver2d/: aabb.h  callbacks.h  color.h  constants.h  debug_draw.h  distance.h  dynamic_tree.h  geometry.h  hull.h  id.h  joint_types.h  manifold.h  math.h  solver2d.h  timer.h  types.h
samples/: CMakeLists.txt  draw.cpp  draw.h  main.cpp  sample.cpp  sample.h  settings.cpp  settings.h
samples/collection/: human.cpp  human.h  sample_behavior.cpp  sample_contact.cpp  sample_far.cpp  sample_joints.cpp
src/: CMakeLists.txt  aabb.c  allocate.c  allocate.h  array.c  array.h  bitset.c  bitset.h  block_allocator.c  block_allocator.h  body.c  body.h  broad_phase.c  broad_phase.h  contact.c  contact.h  contact_solver.c  contact_solver.h  core.h  distance.c  dynamic_tree.c  geometry.c  graph.c  graph.h  hull.c  island.c  island.h  joint.c  joint.h  manifold.c  math.c  mouse_joint.c  pool.c  pool.h  revolute_joint.c  shape.c  shape.h  solve_common.c  solve_jacobi.c  solve_pgs.c  (+16 more)
